--- a/07-two-parameters.Rmd
+++ b/07-two-parameters.Rmd
@@ -296,14 +296,7 @@ virtual_resamples
 
 Voila! We were able to create a thousand bootstrap samples and calculate the mean year for each resample. Let's now create a plot to visualizes the posterior distribution for the mean year of American pennies in 2019.
 
-`r margin_note(" In this sense, the bootstrap distribution represents an (approximate)
-nonparametric, noninformative posterior distribution for our parameter.
-But this bootstrap distribution is obtained painlessly --- without having to
-formally specify a prior and without having to sample from the posterior
-distribution. Hence we might think of the bootstrap distribution as a “poor
-man’s” Bayes posterior. By perturbing the data, the bootstrap approximates
-the Bayesian effect of perturbing the parameters, and is typically
-much simpler to carry out. --- Elements of Statistical Learning, 2nd edition, by Hastie et al, page 271.")`
+
 
 ```{r}
 virtual_resamples %>% 
@@ -575,16 +568,27 @@ Of the `r sims` bootstrap analyses we completed, each starting with a different 
 All our confidence intervals contained true 90th percentile, 184.3 cm! We can conclude from our results that the bootstrap does, in fact, work!
 
 
-<!-- DK: Write a few paragraphs of transition. Bayesian models are the bootstrap, except much more easier to use. -->
+## Watch me wave my hands
 
-<!--   -->
+`r margin_note(" In this sense, the bootstrap distribution represents an (approximate)
+nonparametric, noninformative posterior distribution for our parameter.
+But this bootstrap distribution is obtained painlessly --- without having to
+formally specify a prior and without having to sample from the posterior
+distribution. Hence we might think of the bootstrap distribution as a “poor
+man’s” Bayes posterior. By perturbing the data, the bootstrap approximates
+the Bayesian effect of perturbing the parameters, and is typically
+much simpler to carry out. --- Elements of Statistical Learning, 2nd edition, by Hastie et al, page 271.")`
 
+Did we mention that this book is still a bit of a mess? Well, it is! And, in the entire book, this section is the messiest mess of them all. Forgive us.
 
-<!-- Follow Gelman. Use some math, from the themes.Rmd file. First time doing it, show everything and go through whole output -->
+The mess centers on the transition we are now making between the bootstrap and the full scale Bayesian approach. The margin note provides a bit of a justification. For now, that is all we have. So, watch us wave our hands and pretend that we have justified the leap we are about to take. 
+
+First, if you understand the concept of a posterior probability distribution as explained in Chapter 5 and, second, if you follow our demonstration that the bootstrap generates posterior distributions, then . . . . hand wave vigorously . . . third, you should be confortable going on to the standard Bayesian modeling approach that we will use for the next few chapters.
+
 
 ## `stan_glm()`
 
-Fortunately for us, Bayesian models are not hard to execute in R. Sticking to same the filtered male 2009 data from the bootstrap example, this line of code would be able to perform a bayesian generalized linear model to estimate the mean height. This function comes from the rstanarm package, which is very useful for bayesian models.
+Fortunately for us, Bayesian models are not hard to execute in R. Sticking to same the filtered male 2009 data from the bootstrap example, this line of code would be able to perform a bayesian generalized linear model to estimate the mean height. This function comes from the **rstanarm** package, which is very useful for bayesian models.
 
 ```{r}
 ch7_male <- nhanes %>%
@@ -676,6 +680,41 @@ $$ MADsd = 1.483 * median(|Yi – median(Yi|) $$
 Before moving on to the next section of this chapter, take a second to make sure you understand what MAD SD and how it is calculated - it will play a very big role in demonstrating the uncertainty of most of our future parameters in the book
 
 
+The first step to doing this is first finding the median of the vector (which in this case is 3) and subtracting it from each value. This gives you a vector where each number is the distance from the original the the median of all the differences. Importantly, all of these distances should be the same sign, since we care about distance more than direction, thus we take the absolute value of them.
+
+```{r}
+medianx <- median(x)
+diffx <- abs(x - medianx)
+```
+
+At this point, we have a list of numbers which represent that difference between the original numbers and the median
+
+```{r}
+diffx
+```
+
+The last step in calculating MAD is to take the median of those differenes, which in this case gives us 2
+
+```{r}
+mediandiffx <- median(diffx)
+
+```
+
+Lastly, because it is very useful in data analysis to be able to compare things to standard deviations, we usually rescale the median absolute deviation by multiplying it by 1.483, which reproduces the standard error if the data is normally distributed and can be calculated with the `mad()` equation
+
+```{r}
+mediandiffx * 1.483
+mad(x) 
+
+```
+
+Thus, the full equation of MAD SD is
+
+$$ MADsd = 1.483 * median(|Yi – median(Yi|) $$
+
+Before moving on to the next section of this chapter, take a second to make sure you understand what MAD SD and how it is calculated - it will play a very big role in demonstrating the uncertainty of most of our future parameters in the book
+
+
 ## Unpacking the first parameter: the intercept
 
 ```{r}
@@ -701,7 +740,9 @@ plot(mod.obj, "hist", pars = "sigma")
 
 ## Comparing lm and stan_glm
 
+
 Both the `lm()` and `stan_glm()` functions can be used to to create linear models. The reason this textbook is focusing on `stan_glm()` is through running serveral simulations of the model, it can represent uncertainty ina much more accurate way. Additionally, by performing Bayesian inference, this function also leads to more stable estimates and predictions that can be based on priors. A discussion on priors and Bayesian inference in general is beyond the scope of the chapter, but in all essence a prior is some previous information that you bring to the table when creating a sort of model that can influence how you create the model.
+
 
 ## Visualizing the results of the linear model
 
@@ -715,6 +756,9 @@ The results of the bayesian linera model can also be seen with the posterior lin
 
 ```{r}
 mod.obj_linpred <- posterior_linpred(mod.obj, transform = TRUE)
+```
+
+```{r}
 
 ```
 
