--- a/07-two-parameters.Rmd
+++ b/07-two-parameters.Rmd
@@ -588,36 +588,23 @@ First, if you understand the concept of a posterior probability distribution as 
 
 ## `stan_glm()`
 
-Fortunately for us, Bayesian models are not hard to execute in R. Sticking to same the filtered male 2009 data from the bootstrap example, this line of code would be able to perform a bayesian generalized linear model to estimate the mean height. This function comes from the **rstanarm** package, which is very useful for bayesian models.
+Fortunately for us, Bayesian models are not hard to execute in R. Sticking to same the filtered male 2009 data, we can condence all the work we did in the bootstrap method to the `stan_glm()` function which, when fed the right inputs, creates a bayesian generalized linear model to estimate the mean height. This function comes from the **rstanarm** package, which is very useful for bayesian models in general.
+
+Similarly to the bootstrap method we just went over, this model is taking serveral resamples of the data when anayzing the distribution of heights in our data to create a posterior distribution. Each resample or simulation is its own model of two parameters (an intercept and sigma). We will get into what these parameters actually mean and how they are represented shortly, but first let'stry to run the model
+
+The first argument in the `stan_glm()` function is data, which in our case is the filtered out ch7_male dataset we used in the bootstrap. The only other mandatory argument is the formula that we want the function to build a model around. In this case, since we are only trying to find mean heigh and have no predictor variables, our equation will be height ~ 1. What this means is that the mean height will be calculated by finding an intercept (a constant) which best describes it. Let's run this equation and see what it outputs
+
 
 ```{r}
-ch7_male <- nhanes %>%
-  filter(survey == 2009, gender == "Male") %>%
-  select(height) %>%
-  arrange(height) %>%
-  na.omit()
-
-mod.obj <- stan_glm(data = ch7_male, height ~ 1)
+stan_glm(data = ch7_male, height ~ 1)
 ```
 
+The model is seen at the end of the output, but before we get to it, lets unpack what all of that weird chain stuff.
 
-Similarly to the bootstrap method we just went over, this model is taking serveral resamples of the data when anayzing the distribution of heights in our data to create a posterior distribution. Each resample or simulation is its own model of two parameters (an intercept and sigma). The best way to see this is to convert the model into a matrix with the `as.matrix()` function. As you can see below, the outputted matrix shows you the interept and sigma of each simulation
+As previously said this bayesian generalized linear model is running thousands of simulations in order to give us the most accurate posterior distribution.
 
-```{r}
-sims <- as.matrix(mod.obj)
-```
 
-If you want to get into the specifics, the function is using sampling via the Markov chain Monte Carlo. While an in depth explanation of this sampling method is beyond the scope of the class, you can read up more on both the function and its algorithm here https://mc-stan.org/rstanarm/reference/stan_glm.html if interested.
-
-```{r}
-mod.obj
-```
-
-When you output the model by itself
-
-In essence, chains 1-4 of the output are sampling in a method similar to the bootstrap that we did  to give us the main parameters of the model: the intercept and the sigma. Because all of these cacuation lines are not necessary to understanding our model, you can include refresh=0 in the function and assign it to an object to have a much cleaner output like the one below 
-
-<!-- Explain in detail all aspects of the model. -->
+To check the models further, the function runs four randomly initialized Markov chains (each with 2000 simulations). It is then checking to see if all 4 Markov chains converge to the same posterior distribution. If they do, then the model is deemed valid and you can interpret its output. If not, it will warn you that the Markov chains did not converge and you should not analyze results. In general practice, it is really annoying to see the whole chain output when running models, so we add refresh =0 to the end of the function, telling it to only spit out the output of the model and cover up all of the internal processing.
 
 ```{r}
 mod.obj <- stan_glm(data = ch7_male, height ~ 1, refresh = 0)
@@ -625,7 +612,23 @@ mod.obj
 ```
 
 
-Now that have a much cleaner output, we can more easily understand what this model spit out at us. The first few lines remind us that we performed a bayesian generalized linear model of 1 predictor, height, with a gaussian distribution on a dataset of 2370 people. It is useful to know that a Gaussian, or normal, distribution is a probability distribution that is symmetric about the mean, showing that data near the mean are more frequent than data far from it.
+```{r}
+mod.obj <- stan_glm(data = ch7_male, height ~ 1, refresh = 0)
+mod.obj
+```
+
+
+Now that have a much cleaner output, we can more easily understand what this model spit out at us. 
+
+The first line is telling us what model we used, in our case a `stan_glm()` model. 
+
+The second line tells us this model is using a gaussian (otherwise known as identity) distribution. A Gaussian, or normal, distribution is a probability distribution that is symmetric about the mean, showing that data near the mean are more frequent than data far from it. For that reason, we typically leave it as the default unless we are working with a left hand variable that is not normally distributed. Since we previously saw that height was normally distributed, we are good to go with the Gausian distribution.
+
+The third line gives us back our input formula for the model. As you may remember, we are creating a model predicting height with a constant - which is in essence the simplest model you can create (don't worry we will get into many more advacned models in the next few chapters)
+
+The fourth and fifth lines of the output are very intuitive and are just telling us that our data set that we are feeding to the function has 2370 obeservations and that we only have one predictor (the constant).
+
+The first few lines remind us that we performed a bayesian generalized linear model of 1 predictor, height, with a gaussian distribution on a dataset of 2370 people. It is useful to know that a Gaussian, or normal, distribution is a probability distribution that is symmetric about the mean, showing that data near the mean are more frequent than data far from it.
 
 Under that, we see the output for the two parameters of the model: intercept and sigma. For each parameter, there is a calculated point estimate (medians computed through the simulation) and uncertainty estimates (standard deviations) of these point estimates. This is the case because we cannot be sure what the actual point estimate of the parameter is, but running many simulations through the model can give us an idea of how certain our calculated point estimate is. For a lot of Bayesian inferencing, our uncertainty estimate for each parameter will be calculated using MAD SD, the median absolute deviation.
 
