--- a/07-two-parameters.Rmd
+++ b/07-two-parameters.Rmd
@@ -302,7 +302,7 @@ Have we proved how the bootstrap, almost magically, can create a reasonable post
 
 <!-- Let's start this section with an analogy involving fishing. Say you are trying to catch a fish. On the one hand, you could use a spear, while on the other you could use a net. Using the net will probably allow you to catch more fish! -->
 
-<!-- Now think back to our pennies exercise where you are trying to estimate the true population mean year $\mu$ of *all* US pennies. Think of the value of $\mu$ as a fish. -->
+<!-- Now think back to our pennies exercise< where you are trying to estimate the true population mean year $\mu$ of *all* US pennies. Think of the value of $\mu$ as a fish. -->
 
 <!-- On the one hand, we could use the appropriate *point estimate/sample statistic* to estimate $\mu$, which we saw in the table in the previous section, is the sample mean $\overline{x}$. Based on our sample of 50 pennies from the bank, the sample mean was `r x_bar %>% pull(mean_year) %>% round(2)`. Think of using this value as "fishing with a spear." -->
 
@@ -490,39 +490,12 @@ In any textbook, it will be tough to avoid the "toy problem" trap. The real worl
 
 * What is the probability that, among the next 4 men we meet, the tallest is at least 10 cm taller than the shortest?
 
-<<<<<<< HEAD
-Fortunately for us, Bayesian models are not hard to execute in R. Sticking to same the filtered male 2009 data, we can condence all the work we did in the bootstrap method to the `stan_glm()` function which, when fed the right inputs, creates a bayesian generalized linear model to estimate the mean height. This function comes from the **rstanarm** package, which is very useful for bayesian models in general.
-
-Similarly to the bootstrap method we just went over, this model is taking serveral resamples of the data when anayzing the distribution of heights in our data to create a posterior distribution. Each resample or simulation is its own model of two parameters (an intercept and sigma). We will get into what these parameters actually mean and how they are represented shortly, but first let'stry to run the model
-=======
 * What is our posterior probability of the height of the 3rd tallest man out of the next 100 we meet?
 
 The first two questions have a single number, a single probability, as their answer. The third question requires a full scale posterior probability distribution.
 
 But before starting that process, we need to check that the data we have --- which is only for a sample of adult American men in 2009 --- will allow us to answer these questions, however roughly. 
->>>>>>> master
 
-The first argument in the `stan_glm()` function is data, which in our case is the filtered out ch7_male dataset we used in the bootstrap. The only other mandatory argument is the formula that we want the function to build a model around. In this case, since we are only trying to find mean heigh and have no predictor variables, our equation will be height ~ 1. What this means is that the mean height will be calculated by finding an intercept (a constant) which best describes it. Let's run this equation and see what it outputs
-
-<<<<<<< HEAD
-
-```{r}
-stan_glm(data = ch7_male, height ~ 1)
-```
-
-The model is seen at the end of the output, but before we get to it, lets unpack what all of that weird chain stuff.
-
-As previously said this bayesian generalized linear model is running thousands of simulations in order to give us the most accurate posterior distribution.
-
-
-To check the models further, the function runs four randomly initialized Markov chains (each with 2000 simulations). It is then checking to see if all 4 Markov chains converge to the same posterior distribution. If they do, then the model is deemed valid and you can interpret its output. If not, it will warn you that the Markov chains did not converge and you should not analyze results. In general practice, it is really annoying to see the whole chain output when running models, so we add refresh =0 to the end of the function, telling it to only spit out the output of the model and cover up all of the internal processing.
-
-```{r}
-mod.obj <- stan_glm(data = ch7_male, height ~ 1, refresh = 0)
-mod.obj
-```
-
-=======
 That is where Wisdom comes in. In the social sciences, *there is never a perfect relationship between the data you have and the question you are trying to answer.* Data for American males in 2009 is not the same thing as data for American males today. Nor is it the same as the data for men in France or Mexico. Moreover, the problem hasn't specified where on Earth we are, nor who we are near. Walking near a basketball tournament will generate difference answers than walking around Times Square would. 
 
 Yet this data is relevant. Right? It is certainly better than nothing. That is, using not-perfect data is better than using no data at all.
@@ -538,34 +511,15 @@ knitr::include_graphics("other/images/Justice.jpg")
 ```
 
 Mathematical knowledge is the least important skill for a data scientist. 
->>>>>>> master
 
 However, a little mathematical notation will make our modeling assumptions clear, will bring some clarity and precision to our approach. In this case:
 
 $$ y_i =  \mu + \epsilon_i $$
 with $\epsilon_i \sim N(0, \sigma^2)$. $y_i$ is the height of male $i$. $\mu$ is the average height of all males in the population. $\epsilon_i$ is the "error term," the difference between the height of male $i$ and the average height of all males.  $\epsilon_i$ is normally distributed with a mean of 0 and a standard deviation of $\sigma$. 
 
-<<<<<<< HEAD
-Now that have a much cleaner output, we can more easily understand what this model spit out at us. 
-
-The first line is telling us what model we used, in our case a `stan_glm()` model. 
-
-The second line tells us this model is using a gaussian (otherwise known as identity) distribution. A Gaussian, or normal, distribution is a probability distribution that is symmetric about the mean, showing that data near the mean are more frequent than data far from it. For that reason, we typically leave it as the default unless we are working with a left hand variable that is not normally distributed. Since we previously saw that height was normally distributed, we are good to go with the Gausian distribution.
-
-The third line gives us back our input formula for the model. As you may remember, we are creating a model predicting height with a constant - which is in essence the simplest model you can create (don't worry we will get into many more advacned models in the next few chapters)
-
-The fourth and fifth lines of the output are very intuitive and are just telling us that our data set that we are feeding to the function has 2370 obeservations and that we only have one predictor (the constant).
-
-The first few lines remind us that we performed a bayesian generalized linear model of 1 predictor, height, with a gaussian distribution on a dataset of 2370 people. It is useful to know that a Gaussian, or normal, distribution is a probability distribution that is symmetric about the mean, showing that data near the mean are more frequent than data far from it.
-
-Under that, we see the output for the two parameters of the model: intercept and sigma. A very important thing to remember is that while the function is spitting out two parameters, the actual model we built is a posterior distribution of possible means. The parameters serve as a good way to describe the distribution.
-
-For each parameter, there is a calculated point estimate (medians computed through the simulation) and uncertainty estimates (standard deviations) of these point estimates. This is the case because we cannot be sure what the actual point estimate of the parameter is, but running many simulations through the model can give us an idea of how certain our calculated point estimate is. For a lot of Bayesian inferencing, our uncertainty estimate for each parameter will be calculated using MAD SD, the median absolute deviation.
-=======
 This is almost the simplest model we can construct. Note: 
 
 * The model has two unknown parameters: $\mu$ and $\sigma$. Before we can do anything else we need to estimate the values of these parameters. Can we ever know their exact value? No! Perfection lies only in God's own R code. But, using a Bayesian approach similar to what we used in Chapters \@ref(probability) and \@ref(one-parameter), we will be able to create *posterior distributions* for each parameter.
->>>>>>> master
 
 <!-- DK: Box quote. -->
 
@@ -636,29 +590,6 @@ fit_obj <- stan_glm(data = ch7_male,
 
 * You should always assign the result of the call of `stan_glm()` to an object, as we do above. By convention, the name of that object will often included the word "fit" to indicate that it is a *fitted* model object.
 
-<<<<<<< HEAD
-## Unpacking the first parameter: the intercept
-
-```{r}
-mod.obj
-```
-
-Now that we understand MAD SD, we can understand the rest of the output of our mean height model. Since we are trying to find a constant to predict mean height, the intercept of the model can be interpreted as the model's best estimate of the mean height in the dataset. Recall that the `stan_glm()` function took many different resamples and found the mean of each one. The most accurate estimate of what the true mean actually is the Baysesian point estimate, the median of these means which in this case happends to be 167.5. 
-
-In this case, the MAD_SD for the intercept is .4, meaning that the standard deviation of the posterior distribution of mean heights is .4. As a rule of thumb, the smaller the MAD_SD, the less variation there is among mean heights in the samples generated, and thus the more robust our estimate is.
-
-A great way to see this is to visualize the posterior distribution of intercepts that the model spit out. 
-
-
-```{r}
-plot(mod.obj, "hist", pars = "(Intercept)")
-```
-
-Slightly rearranging this function, you can also see You can see how 167.5 is the median of this distribution, and moreover how 68% of heights fall within one MAD_SD from the median (it is a general rule that 68% of the distribution should fall within one MAD_SD of the median, 95% should fall within two, and 99.7% should fall within 3).
-```{r}
-plot(mod.obj, pars = "(Intercept)", plotfun="areas", prob = .68)
-#abline(v = 167.5)
-=======
 * There is a direct connection between the mathematical form of the model created under Justice an the code we use to fit the model under Courage. `height ~ 1` is the code equivalent of $$ y_i =  \mu $$. 
 
 * The default value for `family` is `gaussian()`, so we did not need to include it in the call above. From the Justice section, the assumption that $\epsilon_i \sim N(0, \sigma^2)$ is equivalent to using `gaussian()`. If $\epsilon_i$ has a different distribution, we would need to use a different `family`.
@@ -679,23 +610,7 @@ The second line tells us this model is using a Gaussian, or normal, distribution
 
 
 The third line gives us back the formula we provided. We are creating a model predicting height with a constant --- which is just about the simplest model you can create. Formulas in R are constructed in two parts. First, on the left side of the tilde (the "~" symbol), is the "response" or "dependent" variable, the thing which we are trying to explain. Since this is a model about `height`, `height` goes on the lefthand side. Second, we have the "explanatory" or "independent"  variables on the righthand side of the tilde. There will often be many such variables but in this, the simplest possible model, there is only one, a single constant.  (The number `1` indicates that constant. It does not mean that we think that everyone is height `1`.) 
->>>>>>> master
 
-
-<<<<<<< HEAD
-## Unpacking the second parameter: sigma
-
-The second parameter, sigma, will be outputted for all bayesian models you compute (no matter how many predictors) and shows us the average error of the model. Another way of conceptualizing this parameter is as the deviation between the predicted value and the observed value. Similar to with the intercept, the model ultimately cannot say a definitive answer to what the parameter is, so there is some uncertainty to even the error parameter itself. More specifically, the MAD_SD of the sigma reflects the standard deviation of the sigma value itself (since so many different samples were taken with each its own sigma). In this instance, since the MAD_SD of sigma is .3, we know that 68% of the times the sigma value of the model fell within 21.5 and 22.1, so we can be pretty confident about this parameter.
-
-```{r}
-plot(mod.obj, "hist", pars = "sigma")
-```
-
-We can also see how the median and MAD_SD values are connected to the sigma posterior distribution with this output. As you can see, the median value falls around 21.8 and 68% of the area od the posterior distrubtion falls within 21.5 and 22.1
-
-```{r}
-plot(mod.obj, pars = "sigma", plotfun="areas", prob = .68)
-=======
 The fourth and fifth lines of the output tell us that we have `r nobs(fit_obj)`  observations and that we only have one predictor (the constant). Again, the terminology is a bit confusing. What does it mean to suggest that $\mu$ is "constant?" It means that, although $\mu$'s value is unknown, it is *fixed*. It does not change from person to person. The `1` in the formula corresponds to the parameter $\mu$ in our mathematical definition of the model. 
 
 We knew all this information before we fit the model. R records it in the `fit_obj` because we don't want to forget what we did. The second half of the display gives a summary of the parameter values.
@@ -745,7 +660,6 @@ fit_obj %>%
          x = "Height in Centimeters",
          y = "Probability") +
     theme_classic()
->>>>>>> master
 ```
 
 Although it is possible to have variables names like (Intercept), it is not recommended. Avoid weird names! When you are stuck with them, place them in backticks. Better, rename them, as we do above.
@@ -769,14 +683,9 @@ Again, $\sigma$ is usually a nuisance parameter. We don't really care what its v
 
 <!-- DK: Fun problem set exercise is to pull this data, pivot it, and then create one graphic with all distributions showing. -->
 
-
-<<<<<<< HEAD
-=======
 #### Decomposing the outcome
 
 Two other important concepts in model creation are "fitted" values and residuals. 
->>>>>>> master
-
 
 ```{r, echo=FALSE}
 set.seed(9)
@@ -788,9 +697,6 @@ ch7_male %>%
   sample_n(5)
 ```
 
-<<<<<<< HEAD
-From this matrix, you can use the ggplot function to create a histogram showing the distribution of mean heights across all of the samples. Looking at the histogram, it seems like the mean point estimate is between 167 and 168, which makes a lot of sense considering our median point estimate is 167.5
-=======
 The fitted value represents the model's best guess at to what the true value of the outcome should be for that individual, given information about any covariates. This is a tricky concept since, after all, we already know what the actual value is. The residual is the difference between the outcome of the fitted value. These definitions lead to a natural decomposition of the outcome data:
 
 
@@ -826,42 +732,12 @@ outcome + fitted + res +
 ```
 
 <!-- ##### Model in a table -->
->>>>>>> master
 
 <!-- DK: Could not get this to work. It seems like these gt objects are already text, so there is no easy way to, for example, change the formatting but adding decimals.  Maybe we should use model_summary, which seems to work nicely. -->
 
 <!-- DK: Maybe I don't need to show posterior_linpred at all? One less thing to worry about. -->
 
-<<<<<<< HEAD
-## Creating a table for the linear model
-
-While the output of the `stan_glm()` function is helpful and the histograms we have created do a good job of showin gus the posterior distributions of the model, it is many times helpful to visualize our results with a table. 
-
-
-
-```{r}
-#mod.obj.df <- as.data.frame((mod.obj))
-#tbl_regression(mod.obj.df)
-```
-
-
-##  Predicting 
-
-Now that we understand our model, we can start actually doing stuff with it, including making a lot of predictions. A very useful tool in the rstanarm package to help us with this is posterior predict, which can make predictions on new data using our model.
-
-Let's first try to find
-
-
-```{r}
-mod.obj_predict <- posterior_predict(mod.obj, transform = TRUE)
-mod.obj_predict[,3] %>% 
-  as_tibble() %>% 
-  ggplot(aes(value)) +
-    geom_histogram(binwidth = 0.002)
-```
-=======
 <!-- A third way to display the model is to use `modelsummary()` from the **modelsummary** package. (Note that this will often require the **broom.mixed** package as well.) -->
->>>>>>> master
 
 <!-- ```{r, eval=FALSE} -->
 <!-- library(broom.mixed) -->
@@ -950,8 +826,6 @@ tibble(pred = pp[, 1]) %>%
 
 Somewhere around 28% or so. 
 
-<<<<<<< HEAD
-=======
 Again, the key difficulty is the population. The problem we actually have involves walking around London, or wherever, today. The data we have involve America in 2009. Those are not the same things! But they are not totally different. Knowing whether the data we have is "close enough" to the problem we want to solve is at the heart of Wisdom.
 
 * What is the probability that, among the next 4 men we meet, the tallest is at least 10 cm taller than the shortest?
@@ -1011,5 +885,3 @@ Having set up the model framework, we need *Courage* to implement the model in c
 
 Let's practice this process another dozen or so times.
 
-
->>>>>>> master
